[package]
name = "wasm_rust_jwt_parse"
version = "0.0.1"
authors = ["shenqinpeng@126.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
proxy-wasm = "0.2.0"
url = "2.2.2"
base64-url = "1.4.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

